--- a/src/audio.html
+++ b/src/audio.html
@@ -21,12 +21,16 @@
                     class="mr-3 h-9 sm:h-9" alt="Flowbite Logo">
             </a>
             <div class="flex md:order-2 gap-1">
-                <a type="button"
-                    class="gradient-border py-2.5 px-5 mr-2 text-sm font-medium text-gray-900  bg-white  hover:bg-gray-100 hover:text-blue-700   dark:bg-gray-800 dark:text-gray-400 dark:hover:text-white dark:hover:bg-gray-700">Listen</a>
-
-                <button type="button"
-                    class="py-2.5 px-5 mr-2 text-sm font-medium text-gray-900 focus:outline-none bg-white  border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">Watch
-                    Now</button>
+                <a class="relative inline-flex items-center justify-center p-0.5 mb-2 mr-2 overflow-hidden text-sm font-medium text-gray-900 rounded-lg group bg-gradient-to-br from-pink-500 to-orange-400 group-hover:from-pink-500 group-hover:to-orange-400 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-pink-200 dark:focus:ring-pink-800">
+                    <span class="relative px-5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0">
+                       Listen
+                    </span>
+                  </a>
+                    <a class="relative inline-flex items-center justify-center p-0.5 mb-2 mr-2 overflow-hidden text-sm font-medium text-gray-900 rounded-lg group bg-gradient-to-br from-purple-500 to-pink-500 group-hover:from-purple-500 group-hover:to-pink-500 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-purple-200 dark:focus:ring-purple-800">
+                        <span class="relative px-5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0">
+                            Watch Now
+                        </span>
+                      </a>
 
                 <button data-collapse-toggle="navbar-sticky" type="button"
                     class="inline-flex items-center p-2 text-sm text-gray-500  md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
@@ -66,16 +70,18 @@
             </div>
         </div>
     </nav>
-    <main class="container mx-auto">
+    <main class="">
         
-        <div class="flex min-h-screen w-full items-center justify-center">
-            
-            <button type="button" id="play">PLAY NOW</button>
-            <div id="content">
-              <img src="./images/the-circle.png" id="show-img" alt="show image" />
-              <canvas id="canvas"></canvas>
-              <audio id="audio" controls></audio>
-            </div>
+
+        <button type="button" id="play" class="relative inline-flex items-center justify-center p-0.5 mb-2 mr-2 overflow-hidden text-sm font-medium text-gray-900 rounded-lg group bg-gradient-to-br from-cyan-500 to-blue-500 group-hover:from-cyan-500 group-hover:to-blue-500 hover:text-white dark:text-white focus:ring-4 focus:outline-none focus:ring-cyan-200 dark:focus:ring-cyan-800">
+            <span class="relative px-5 py-2.5 transition-all ease-in duration-75 bg-white dark:bg-gray-900 rounded-md group-hover:bg-opacity-0">
+                PLAY NOW
+            </span>
+          </button>
+        <div id="content">
+          <img src="./images/the-circle.png" id="show-img" alt="show image" crossorigin />
+          <canvas id="canvas"></canvas>
+          <audio id="audio" controls></audio>
         </div>
 
     </main>
