--- a/src/audio.html
+++ b/src/audio.html
@@ -18,10 +18,9 @@
     <script src="./scripts/preloadScripts.js"></script>
     <link href="./css/index.css" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.3/dist/flowbite.min.css" />
-
 </head>
 
-<body class="dark:bg-black">
+<body id="audiopage" class="dark:bg-black">
     <nav
         class="bg-#f7f7f9 px-2 sm:px-4 py-2.5 dark:bg-black w-full z-20 top-0 left-0 border-b border-gray-200 dark:border-gray-600 ">
         <div class="container flex flex-wrap justify-between items-center mx-auto">
@@ -65,11 +64,11 @@
                     </li>
                     <li>
                         <a href="#"
-                            class="block py-2 pr-4 pl-3 text-black rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-[#dd0e34] md:p-0 md:dark:hover:text-white dark:text-gray-400 dark:hover:bg-black dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Services</a>
+                            class="block py-2 pr-4 pl-3 text-black rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-[#dd0e34] md:p-0 md:dark:hover:text-white dark:text-gray-400 dark:hover:bg-black dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">#NRGWAVE</a>
                     </li>
                     <li>
                         <a href="#"
-                            class="block py-2 pr-4 pl-3 text-black rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-[#dd0e34] md:p-0 md:dark:hover:text-white dark:text-gray-400 dark:hover:bg-black dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Contact</a>
+                            class="block py-2 pr-4 pl-3 text-black rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-[#dd0e34] md:p-0 md:dark:hover:text-white dark:text-gray-400 dark:hover:bg-black dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Advertise</a>
                     </li>
                 </ul>
             </div>
@@ -118,9 +117,26 @@
         </div>
     </div>
 
-    <footer>
 
+    <footer class="p-4 bg-[#f7f7f9]  shadow md:flex md:items-center md:justify-between md:p-6 dark:bg-black">
+        <span class="text-sm text-black sm:text-center dark:text-[#f7f7f9]">© 2022 <a href="https://flowbite.com/" class="hover:underline">NRG</a>. All Rights Reserved.
+        </span>
+        <ul class="flex flex-wrap items-center mt-3 text-sm text-black dark:text-[#f7f7f9] sm:mt-0">
+            <li>
+                <a href="#" class="mr-4 hover:underline md:mr-6 ">About</a>
+            </li>
+            <li>
+                <a href="#" class="mr-4 hover:underline md:mr-6">Privacy Policy</a>
+            </li>
+            <li>
+                <a href="#" class="mr-4 hover:underline md:mr-6">Licensing</a>
+            </li>
+            <li>
+                <a href="#" class="hover:underline">Contact</a>
+            </li>
+        </ul>
     </footer>
+    
     <button type="button" id="theme-toggle" type="button"
         class="fixed bottom-2 right-3 text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-black focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-black text-sm p-2.5">
         <svg id="theme-toggle-dark-icon" class="hidden w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
