--- a/src/video.html
+++ b/src/video.html
@@ -76,21 +76,11 @@
         </div>
     </nav>
     <main class="">
-        <div class="player flex flex-col w-full items-center justify-center">
-            <video controls autoplay class="max-w-full w-full h-2/3">
+            <video controls autoplay class="w-full max-w-full h-auto ">
                 <source src="./videos/sintel-short.mp4" type="video/mp4">
                 <source src="./videos/sintel-short.webm" type="video/webm">
                 <!-- fallback content here -->
-            </video>
-            <div class="controls w-full">
-                <button class="play" data-icon="P" aria-label="play pause toggle"></button>
-                <button class="stop" data-icon="S" aria-label="stop"></button>
-                <div class="timer">
-                    <div></div><span aria-label="timer">00:00</span>
-                </div>
-                <button class="rwd" data-icon="B" aria-label="rewind"></button>
-                <button class="fwd" data-icon="F" aria-label="fast forward"></button>
-            </div>
+
         </div>
 
     </main>
