--- a/src/video.html
+++ b/src/video.html
@@ -86,7 +86,7 @@
     </main>
 
     <footer
-        class="container mx-auto p-4 bg-[#f7f7f9]  shadow md:flex md:items-center md:justify-between md:p-6 dark:bg-black">
+        class="container mx-auto p-4 bg-[#f7f7f9] bottom-0 fixed md:flex md:items-center md:justify-between md:p-6 dark:bg-black">
         <span class="text-sm text-black sm:text-center dark:text-[#f7f7f9]">© 2022 <a href="https://flowbite.com/"
                 class="hover:underline">NRG</a>. All Rights Reserved.
         </span>
