--- a/src/audio.html
+++ b/src/audio.html
@@ -118,7 +118,7 @@
     </div>
 
 
-    <footer class="p-4 bg-[#f7f7f9]  shadow md:flex md:items-center md:justify-between md:p-6 dark:bg-black">
+    <footer class="container mx-auto p-4 bg-[#f7f7f9] md:flex md:items-center md:justify-between md:p-6 dark:bg-black">
         <span class="text-sm text-black sm:text-center dark:text-[#f7f7f9]">© 2022 <a href="https://flowbite.com/" class="hover:underline">NRG</a>. All Rights Reserved.
         </span>
         <ul class="flex flex-wrap items-center mt-3 text-sm text-black dark:text-[#f7f7f9] sm:mt-0">
@@ -153,5 +153,4 @@
 </body>
 <script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"></script>
 <script src="./scripts/scripts.js"></script>
-
 </html>
