--- a/src/index.html
+++ b/src/index.html
@@ -133,7 +133,6 @@
         </div>
     </header>
     <main class="container py-3 px-3 mx-auto w-full">
-
         <div class="mt-10 md:mt-24">
             <div id="wrapper" class="sm:space-y-0 sm:grid sm:grid-cols-12 gap-10">
                 <div id=spinner class="text-center">
@@ -172,7 +171,7 @@
             </div>
         </div>
     </div>
-    <footer class="p-4 bg-[#f7f7f9]  shadow md:flex md:items-center md:justify-between md:p-6 dark:bg-black">
+    <footer class="container mx-auto p-4 bg-[#f7f7f9] md:flex md:items-center md:justify-between md:p-6 dark:bg-black">
         <span class="text-sm text-black sm:text-center dark:text-[#f7f7f9]">© 2022 <a href="https://flowbite.com/" class="hover:underline">NRG</a>. All Rights Reserved.
         </span>
         <ul class="flex flex-wrap items-center mt-3 text-sm text-black dark:text-[#f7f7f9] sm:mt-0">
