--- a/src/audio.html
+++ b/src/audio.html
@@ -3,14 +3,24 @@
 
 <head>
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-F335LX54VG"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-F335LX54VG"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-  gtag('config', 'G-F335LX54VG');
-</script>
+        gtag('config', 'G-F335LX54VG');
+    </script>
+    <!-- Google Tag Manager -->
+    <script>(function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-MZ499VG');</script>
+    <!-- End Google Tag Manager -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,6 +31,10 @@
 </head>
 
 <body id="audiopage" class="dark:bg-black">
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MZ499VG" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <nav
         class="bg-#f7f7f9 px-2 sm:px-4 py-2.5 dark:bg-black w-full z-20 top-0 left-0 border-b border-gray-200 dark:border-gray-600 ">
         <div class="container flex flex-wrap justify-between items-center mx-auto">
@@ -35,7 +49,7 @@
                 </a>
                 <a href="./video.html" type="button"
                     class="draw-border text-[#dd0e34] hover:text-white border border-gray-800 hover:bg-[#dd0e34] focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium text-sm px-5 py-2.5 text-center mr-2 mb-2 dark:border-gray-600 dark:text-gray-400 dark:hover:text-white dark:hover:bg-[#dd0e34] dark:focus:ring-white">
-                <span>Watch Now</span></a>
+                    <span>Watch Now</span></a>
 
                 <button data-collapse-toggle="navbar-sticky" type="button"
                     class="inline-flex items-center p-2 text-sm text-gray-500  md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-black dark:focus:ring-gray-600"
@@ -119,7 +133,8 @@
 
 
     <footer class="container mx-auto p-4 bg-[#f7f7f9] md:flex md:items-center md:justify-between md:p-6 dark:bg-black">
-        <span class="text-sm text-black sm:text-center dark:text-[#f7f7f9]">© 2022 <a href="https://flowbite.com/" class="hover:underline">NRG</a>. All Rights Reserved.
+        <span class="text-sm text-black sm:text-center dark:text-[#f7f7f9]">© 2022 <a href="https://flowbite.com/"
+                class="hover:underline">NRG</a>. All Rights Reserved.
         </span>
         <ul class="flex flex-wrap items-center mt-3 text-sm text-black dark:text-[#f7f7f9] sm:mt-0">
             <li>
@@ -136,7 +151,7 @@
             </li>
         </ul>
     </footer>
-    
+
     <button type="button" id="theme-toggle" type="button"
         class="fixed bottom-2 right-3 text-gray-500 dark:text-gray-400 hover:bg-gray-100 dark:hover:bg-black focus:outline-none focus:ring-4 focus:ring-gray-200 dark:focus:ring-black text-sm p-2.5">
         <svg id="theme-toggle-dark-icon" class="hidden w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
@@ -153,4 +168,5 @@
 </body>
 <script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"></script>
 <script src="./scripts/scripts.js"></script>
+
 </html>
