--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,16 @@
 
         gtag('config', 'G-F335LX54VG');
     </script>
+    <!-- Google Tag Manager -->
+    <script>(function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-MZ499VG');</script>
+    <!-- End Google Tag Manager -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,6 +32,10 @@
 </head>
 
 <body class="dark:bg-black min-h-screen">
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MZ499VG" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <nav
         class="bg-#f7f7f9 px-2 sm:px-4 py-2.5 dark:bg-black w-full z-20 top-0 left-0 border-b border-gray-200 dark:border-gray-600 ">
         <div class="container flex flex-wrap justify-between items-center mx-auto">
@@ -172,7 +186,8 @@
         </div>
     </div>
     <footer class="container mx-auto p-4 bg-[#f7f7f9] md:flex md:items-center md:justify-between md:p-6 dark:bg-black">
-        <span class="text-sm text-black sm:text-center dark:text-[#f7f7f9]">© 2022 <a href="https://flowbite.com/" class="hover:underline">NRG</a>. All Rights Reserved.
+        <span class="text-sm text-black sm:text-center dark:text-[#f7f7f9]">© 2022 <a href="https://flowbite.com/"
+                class="hover:underline">NRG</a>. All Rights Reserved.
         </span>
         <ul class="flex flex-wrap items-center mt-3 text-sm text-black dark:text-[#f7f7f9] sm:mt-0">
             <li>
