--- a/src/audio.html
+++ b/src/audio.html
@@ -168,5 +168,7 @@
 </body>
 <script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"></script>
 <script src="./scripts/scripts.js"></script>
+<script src="./scripts/audioanalytics.js"></script>
+
 
 </html>
