--- a/src/video.html
+++ b/src/video.html
@@ -137,5 +137,5 @@
 <script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"></script>
 <script src="./scripts/video.js"></script>
 <script src="./scripts/scripts.js"></script>
-
+<script src="./scripts/videoanalytics.js"></script>
 </html>
