--- a/src/video.html
+++ b/src/video.html
@@ -24,8 +24,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video & Audio Streaming platforom</title>
+    <title>NRG | Watch</title>
     <script src="./scripts/preloadScripts.js"></script>
+    <script src="./scripts/videoanalytics.js"></script>
     <link href="./css/index.css" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/flowbite@1.5.3/dist/flowbite.min.css" />
 </head>
@@ -135,7 +136,6 @@
     </button>
 </body>
 <script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"></script>
-<script src="./scripts/video.js"></script>
 <script src="./scripts/scripts.js"></script>
 <script src="./scripts/videoanalytics.js"></script>
 </html>
