--- a/src/video.html
+++ b/src/video.html
@@ -91,13 +91,13 @@
         </div>
     </nav>
     <main class="">
-        <video controls autoplay class="w-full max-w-full h-auto ">
-            <source src="./videos/sintel-short.mp4" type="video/mp4">
-            <source src="./videos/sintel-short.webm" type="video/webm">
-            <!-- fallback content here -->
-
-            </div>
-
+        <div class="flex items-center py-5">
+            <video controls autoplay class="w-full max-w-full h-auto ">
+                <source src="./videos/sintel-short.mp4" type="video/mp4">
+                <source src="./videos/sintel-short.webm" type="video/webm">
+                <!-- fallback content here -->
+            </video>
+        </div>
     </main>
 
     <footer
@@ -138,4 +138,5 @@
 <script src="https://unpkg.com/flowbite@1.5.3/dist/flowbite.js"></script>
 <script src="./scripts/scripts.js"></script>
 <script src="./scripts/videoanalytics.js"></script>
+
 </html>
