--- a/src/index.html
+++ b/src/index.html
@@ -45,11 +45,11 @@
             </a>
             <div class="flex md:order-2 gap-1">
                 <a href="./audio.html" type="button"
-                    class="draw-border text-[#dd0e34] hover:text-white border border-gray-800 hover:bg-[#dd0e34] focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium text-sm px-5 py-2.5 text-center mr-2 mb-2 dark:border-gray-600 dark:text-gray-400 dark:hover:text-white dark:hover:bg-[#dd0e34] dark:focus:ring-white">
+                    class="draw-border text-[#dd0e34] hover:text-white border border-gray-800 bg-red hover:bg-[#dd0e34] focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium text-sm px-5 py-2.5 text-center mr-2 mb-2 dark:border-gray-600 dark:text-gray-400 dark:hover:text-white dark:hover:bg-[#dd0e34] dark:focus:ring-white">
                     <span>Listen</span>
                 </a>
                 <a href="./video.html" type="button"
-                    class="draw-border text-[#dd0e34] hover:text-white border border-gray-800 hover:bg-[#dd0e34] focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium text-sm px-5 py-2.5 text-center mr-2 mb-2 dark:border-gray-600 dark:text-gray-400 dark:hover:text-white dark:hover:bg-[#dd0e34] dark:focus:ring-white">
+                    class="draw-border text-[#dd0e34] hover:text-white border border-gray-800 bg-blue hover:bg-[#dd0e34] focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium text-sm px-5 py-2.5 text-center mr-2 mb-2 dark:border-gray-600 dark:text-gray-400 dark:hover:text-white dark:hover:bg-[#dd0e34] dark:focus:ring-white">
                     <span>Watch Now</span></a>
 
                 <button data-collapse-toggle="navbar-sticky" type="button"
